--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Navbar css */
 
 nav.navbar {
-  padding: 18px 0;
+  padding: 30px;
   width: 100%;
   height: 70px;
   top: 0;
@@ -57,12 +57,7 @@ nav.navbar {
 }
 
 nav.navbar.scrolled {
-  padding: 0px 0;
   background-color: #121212;
-}
-
-nav.navbar a.navbar-brand {
-    width: 9%;
 }
 
 nav.navbar .navbar-nav .nav-link.navbar-link {
@@ -87,44 +82,6 @@ span.navbar-text {
     display: inline-block;
     margin-left: 14px;
 }
-
-/* .social-icon a {
-    width: 42px;
-    height: 42px;
-    background: rgba(217, 217, 217, 0.1);
-    display: inline-flex;
-    border-radius: 50%;
-    margin-right: 6px;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
-    border: 1px solid #fff;
-} */
-
-/* .social-icon a::before {
-    content: "";
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    background-color: #ffffff;
-    border-radius: 50%;
-    transform: scale(0);
-	  transition: 0.3s ease-in-out;
-} */
-
-/* .social-icon a:hover::before {
-    transform: scale(1);
-} */
-
-/* .social-icon a img {
-	width: 40%;
-	z-index: 1;
-	transition: 0.3s ease-in-out;
-} */
-
-/* .social-icon a:hover img {
-	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
-} */
 
 .navbar-text button {
   font-weight: 700;
@@ -179,37 +136,46 @@ nav.navbar .navbar-toggler-icon:focus {
 	border-bottom: 2px solid #fff;
 }
 
-/* nav.navbar .navbar-toggler-icon:after,
-nav.navbar .navbar-toggler-icon:before {
-	width: 24px;
-	position: absolute;
-	height: 2px;
-	background-color: #fff;
-	top: 0;
-	left: 0;
-	content: '';
-	z-index: 2;
-	transition: all 300ms linear;
-} */
+/* Footer CSS */
 
-/* nav.navbar .navbar-toggler-icon:after {
-	top: 8px;
-} */
-
-/* nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
-	transform: rotate(45deg);
-	background-color: #fff;
-	height: 2px;
-} */
-
-/* nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
-	transform: translateY(8px) rotate(-45deg);
-	background-color: #fff;
-	height: 2px;
+footer.footer {
+  padding: 30px;
+  width: 100%;
+  height: 70px;
+  z-index: 9999;
+  transition:  0.32s ease-in-out;
+    background-color: #121212;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
 }
-nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-	border-color: transparent;
-} */
+
+footer.footer.scrolled {
+  background-color: #463f3a;
+}
+
+.footer-icon {
+  width: 42px;
+  height: 42px;
+  background: rgba(217, 217, 217, 0);
+  display: inline-flex;
+  border-radius: 50%;
+  margin-left: 10px;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #fff;
+  transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.footer-icon img {
+  width: 18px;
+  height: 18px;
+}
+
+.footer-icon:hover {
+  opacity: 0.6;
+}
 
 /* TabButton CSS */
 
