Navbar changed into hamburger menu

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,44 +1,44 @@
-$primary-color: white;
-// $secondary-color: #BCB8B1;
+$primary-color: #E4E0E1;
+$secondary-color: #D6C0B3;
 
-$border-thickness: 60px;
-$border-radius: 20px;
-$padding: 40px;
+$border-thickness: 80px;
+$padding: 50px;
 
 .body {
   position: relative;
   min-height: 100vh;
   min-width: 100vw;
   overflow: hidden;
+  background-color: $primary-color;
 }
 
-.leftBorder, .rightBorder {
-   position: fixed;
-   top: 0;
-   width: $border-thickness;
-   height:100vh;
-  //  z-index: 100;
-   pointer-events: none;
-   background-size: cover;
-   background-image: url('~assets/images/LRborder.png');
-}
+// .leftBorder, .rightBorder {
+//    position: fixed;
+//    top: 0;
+//    width: $border-thickness;
+//    height:100vh;
+//   //  z-index: 100;
+//    pointer-events: none;
+//    background-size: cover;
+//    background-image: url('~assets/images/LRborder.png');
+// }
 
-.leftBorder { left: 0; }
-.rightBorder { right: 0; }
+// .leftBorder { left: 0; }
+// .rightBorder { right: 0; }
 
-.topBorder, .bottomBorder {
-  position: fixed;
-  left:0;
-  width: 100vw;
-  height: $border-thickness;
-  // z-index: 100;
-  pointer-events: none;
-  background-size: cover;
-  background-image: url('~assets/images/TBborder.png');
-}
+// .topBorder, .bottomBorder {
+//   position: fixed;
+//   left:0;
+//   width: 100vw;
+//   height: $border-thickness;
+//   // z-index: 100;
+//   pointer-events: none;
+//   background-size: cover;
+//   background-image: url('~assets/images/TBborder.png');
+// }
 
-.topBorder { top: 0; }
-.bottomBorder { bottom: 0; }
+// .topBorder { top: 0; }
+// .bottomBorder { bottom: 0; }
 
 .container {
   position: absolute;
@@ -46,11 +46,11 @@ $padding: 40px;
   left: $border-thickness;
   right: $border-thickness;
   bottom: $border-thickness;
-  border-radius: $border-radius;
   padding: $padding;
-  overflow-y: auto;
+  // overflow-y: auto; scrollable
   box-sizing: border-box;
-  background-color: $primary-color;
+  background-color: $secondary-color;
+  border-radius: 20px;
 }
 
 // @media (max-width: 900px) {
