--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,6 @@
 $primary-color: #E4E0E1;
 $secondary-color: white;
-
 $border-thickness: 80px;
-$padding: 50px;
 
 .body {
   position: relative;
@@ -12,33 +10,31 @@ $padding: 50px;
   background-color: $primary-color;
 }
 
-.leftBorder, .rightBorder {
-   position: fixed;
-   top: 0;
+.border-x {
+  position: fixed;
+   width: 100vw;
+  height: $border-thickness;
+  //  z-index: 100;
+   pointer-events: none;
+   background-size: cover;
+   background-image: url('~assets/images/TBborder.png');
+}
+
+.topBorder { @extend .border-x; top: 0 }
+.bottomBorder { @extend .border-x; bottom: 0; }
+
+.border-y {
+  position: fixed;
    width: $border-thickness;
-   height:100vh;
+  height: 100vh;
   //  z-index: 100;
    pointer-events: none;
    background-size: cover;
    background-image: url('~assets/images/LRborder.png');
 }
 
-.leftBorder { left: 0; }
-.rightBorder { right: 0; }
-
-.topBorder, .bottomBorder {
-  position: fixed;
-  left:0;
-  width: 100vw;
-  height: $border-thickness;
-  // z-index: 100;
-  pointer-events: none;
-  background-size: cover;
-  background-image: url('~assets/images/TBborder.png');
-}
-
-.topBorder { top: 0; }
-.bottomBorder { bottom: 0; }
+.leftBorder { @extend .border-y; left: 0 }
+.rightBorder { @extend .border-y; right: 0 }
 
 .container {
   position: absolute;
@@ -46,8 +42,8 @@ $padding: 50px;
   left: $border-thickness;
   right: $border-thickness;
   bottom: $border-thickness;
-  padding: $padding;
-  overflow-y: fixed;
+  padding: 50;
+  overflow-y: auto;
   box-sizing: border-box;
   background-color: $secondary-color;
   border-radius: 20px;
