--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -38,7 +38,7 @@
   height: 250px;
   margin: 0;
   list-style: none;
-  background-color: #ecdfcc;
+  background-color: #a3a5c2;
   border-bottom-left-radius: 300px;
   z-index: 9;
   display: flex;
@@ -102,7 +102,7 @@
 .menuItem {
   font-family: "Caveat Brush", cursive;
   font-size: 25px;
-  color: black;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   text-align: center;
   padding-left: 10px;
