--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,9 @@
-$primary-color: #edeef5;
 $border-thickness: 80px;
 
 .body {
   position: relative;
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
   background-color: #c8c9d6;
 }
@@ -22,7 +21,7 @@ $border-thickness: 80px;
 }
 
 .snapSection {
-  height: 100vh;
+  min-height: calc(100vh - 160px);
   scroll-snap-align: start;
   display: flex;
   justify-content: center;
@@ -38,7 +37,7 @@ $border-thickness: 80px;
   bottom: $border-thickness;
   padding: 0;
   box-sizing: border-box;
-  background-color: $primary-color;
+  background-color: #edeef5;
   border-radius: 20px;
   overflow: hidden;
 
