--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -1,9 +1,9 @@
 .hamburger {
   position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 30px;
-  height: 20px;
+  top: 35px;
+  right: 35px;
+  width: 25px;
+  height: 18px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -18,8 +18,12 @@
   z-index: 10;
 }
 
+.open .bar {
+  background-color: white;
+}
+
 .open .bar:nth-child(1) {
-  transform: rotate(45deg) translate(3px, 1px);
+  transform: rotate(45deg) translate(1px, 1px);
 }
 
 .open .bar:nth-child(2) {
@@ -34,8 +38,8 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 320px;
-  height: 250px;
+  width: 250px;
+  height: 200px;
   margin: 0;
   list-style: none;
   background-color: #a3a5c2;
@@ -45,7 +49,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 80px;
+  padding-top: 50px;
+  padding-left: 30px;
   transform: scale(0);
   transform-origin: top right;
   pointer-events: none;
@@ -101,17 +106,17 @@
 
 .menuItem {
   font-family: "Caveat Brush", cursive;
-  font-size: 25px;
+  font-size: 20px;
   color: rgb(255, 255, 255);
   cursor: pointer;
   text-align: center;
-  padding-left: 10px;
-  height: 40px;
+  height: 35px;
   position: relative;
   text-decoration: none;
   display: block;
   width: max-content;
   margin: 0 auto;
+  padding-left: 35px;
   transition: letter-spacing 0.5s ease;
 }
 
@@ -123,9 +128,9 @@
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 15px;
   width: 0;
-  height: 4px;
+  height: 5px;
   background: linear-gradient(90deg, #a5b68d, #d6e2c7);
   border-radius: 0;
   transition: all 0.3s ease-in-out;
