Banner changed into Home

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,4 +1,4 @@
-.banner {
+.home {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -6,7 +6,7 @@
   text-align: center;
 }
 
-.bannerImage{
+.HomeImage{
   width: 100px;
   height: 100px;
   padding: 24px;
