--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -131,7 +131,7 @@
   left: 15px;
   width: 0;
   height: 5px;
-  background: linear-gradient(90deg, #a5b68d, #d6e2c7);
+  background: linear-gradient(90deg, #a2a5e7, rgb(192, 233, 234));
   border-radius: 0;
   transition: all 0.3s ease-in-out;
 }
