--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -1,9 +1,9 @@
 .hamburger {
   position: absolute;
-  top: 35px;
-  right: 35px;
-  width: 25px;
-  height: 18px;
+  top: 32px;
+  right: 37px;
+  width: 29px;
+  height: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -12,8 +12,8 @@
 
 .bar {
   height: 3px;
-  background-color: black;
-  border-radius: 2px;
+  background-color: #615850;
+  border-radius: 0;
   transition: all 0.3s ease;
   z-index: 10;
 }
@@ -23,7 +23,7 @@
 }
 
 .open .bar:nth-child(1) {
-  transform: rotate(45deg) translate(1px, 1px);
+  transform: rotate(45deg) translate(2px, 1px);
 }
 
 .open .bar:nth-child(2) {
@@ -42,7 +42,7 @@
   height: 200px;
   margin: 0;
   list-style: none;
-  background-color: #a3a5c2;
+  background-color: #9e9389;
   border-bottom-left-radius: 300px;
   z-index: 9;
   display: flex;
