--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -42,7 +42,7 @@
   height: 200px;
   margin: 0;
   list-style: none;
-  background-color: #9e9389;
+  background-color: #ac8492;
   border-bottom-left-radius: 300px;
   z-index: 9;
   display: flex;
