--- a/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -1,24 +1,26 @@
 .crumbs {
   position: absolute;
   right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
+  bottom: 20px;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
 }
 
 .item {
   all: unset;
   cursor: pointer;
-  line-height: 0;
 }
 
 .icon {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
   transition: transform 120ms ease, opacity 120ms ease;
 }
 
-.icon:hover { transform: scale(1.06);}
-.active { transform: scale(1.1);}
+.icon:hover {
+  transform: scale(1.06);
+}
+.active {
+  transform: scale(1.1);
+}
